Move email as query param for list endpoint
